--- a/monkeybread.html
+++ b/monkeybread.html
@@ -280,7 +280,7 @@
               <img src="assets/images/menus/menu127.jpg" class="w-100" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="recipe-sidebar.html" class="text-black d-block mt-1 font-weight-semibold big">No Bake Cheesecake</a>
+              <a href="recipe-sidebar.html" class="text-black d-block mt-1 font-weight-semibold big">Pumpkin Cheesecake Cookies</a>
             </figcaption>
           </figure>
         </div>
@@ -307,10 +307,10 @@
         <div class="col-lg-3 col-md-4 col-6">
           <figure class="my-3 my-md-4 tstbite-card">
             <a href="recipe-sidebar.html" class="tstbite-animation stretched-link rounded-6">
-              <img src="assets/images/menus/menu139.jpg" class="w-100" alt="Menu">
+              <img src="assets/images/menus/bostoncreamcupcakes.png" class="w-100" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="recipe-sidebar.html" class="text-black d-block mt-1 font-weight-semibold big">Strawberry Cream Cake Bites</a>
+              <a href="recipe-sidebar.html" class="text-black d-block mt-1 font-weight-semibold big">Boston Cream Cupcakes</a>
             </figcaption>
           </figure>
         </div>
