--- a/index.html
+++ b/index.html
@@ -216,6 +216,38 @@
           </figure>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
+              <img src="assets/images/menus/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
+              <img src="assets/images/menus/cinnamonrolls.png" class="w-100" alt="Cinnamon Rolls">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/monkeybread" class="tstbite-animation rounded-6">
+              <img src="assets/images/menus/monkeybread.jpeg" class="w-100" alt="Menu">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
   </div>
 
