--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               <img src="assets/images/menus/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
             </a>
             <figcaption class="mt-2">
-              <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
+              <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
             </figcaption>
           </figure>
         </div>
@@ -233,7 +233,7 @@
               <img src="assets/images/menus/cinnamonrolls.png" class="w-100" alt="Cinnamon Rolls">
             </a>
             <figcaption class="mt-2">
-              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
+              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Princes Krofne (Cream Puffs)</a>
             </figcaption>
           </figure>
         </div>
@@ -243,7 +243,7 @@
               <img src="assets/images/menus/monkeybread.jpeg" class="w-100" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
+              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
             </figcaption>
           </figure>
         </div>
