--- a/monkeybread.html
+++ b/monkeybread.html
@@ -270,7 +270,7 @@
               <img src="assets/images/menus/cinnamonrolls.png" class="w-100" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="recipe-sidebar.html" class="text-black d-block mt-1 font-weight-semibold big">Cinnamon Rolls</a>
+              <a href="/cinnamonrolls" class="text-black d-block mt-1 font-weight-semibold big">Cinnamon Rolls</a>
             </figcaption>
           </figure>
         </div>
@@ -310,7 +310,7 @@
               <img src="assets/images/menus/bostoncreamcupcakes.png" class="w-100" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="recipe-sidebar.html" class="text-black d-block mt-1 font-weight-semibold big">Boston Cream Cupcakes</a>
+              <a href="/bostoncreamcupcakes" class="text-black d-block mt-1 font-weight-semibold big">Boston Cream Cupcakes</a>
             </figcaption>
           </figure>
         </div>
