--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
+              <img src="assets/images/menus/biscuits.jpg" class="w-100" alt="Boston Cream Cupcakes">
             </a>
             <figcaption class="mt-2">
-              <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
+              <a href="/biscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
             </figcaption>
           </figure>
         </div>
