--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/monkeybread" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/monkeybread.jpeg" class="w-100" alt="Menu">
+              <img src="assets/images/menus/chocolatechipcookiecake.jpg" class="w-100" alt="Menu">
             </a>
             <figcaption class="mt-2">
               <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
