--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               <img src="assets/images/menus/cinnamonrolls.png" class="w-100" alt="Cinnamon Rolls">
             </a>
             <figcaption class="mt-2">
-              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
+              <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
             </figcaption>
           </figure>
         </div>
@@ -243,7 +243,7 @@
               <img src="assets/images/menus/chocolatechipcookiecake.jpg" class="w-100" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
+              <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
             </figcaption>
           </figure>
         </div>
