--- a/biscuits.html
+++ b/biscuits.html
@@ -154,31 +154,27 @@
                 <strong>Dough</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 and 3/4 cups (344g) flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="crackers">2 cups (250g) flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/4 cup (50g) granulated sugar</label>
+                  <label class="form-check-label" for="unsalted">1 tablespoon baking powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
+                  <label class="form-check-label" for="unsalted">1 tablespoon granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3/4 cup (180ml) whole milk</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3 tablespoons (45g) unsalted butter</label>
+                  <label class="form-check-label" for="unsalted">6 tablespoons unsalted butter, very cold (unsalted European butter is ideal, but not required)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 packet instant yeast</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 large egg (room temperature)</label>
+                  <label class="form-check-label" for="unsalted">3/4 cup whole milk</label>
                 </div>
               </div>
               <div class="checklist pb-4">
