--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/cinnamonrolls.png" class="w-100" alt="Cinnamon Rolls">
+              <img src="assets/images/menus/creampuffs.jpg" class="w-100" alt="Cinnamon Rolls">
             </a>
             <figcaption class="mt-2">
               <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
