--- a/biscuits.html
+++ b/biscuits.html
@@ -175,6 +175,7 @@
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
                   <label class="form-check-label" for="unsalted">3/4 cup whole milk</label>
+                  <label class="form-check-label" for="unsalted">*For best results, chill your butter in the freezer for 10-20 minutes before beginning this recipe. It's ideal that the butter is very cold for light, flaky, buttery biscuits.</label>
                 </div>
               </div>
             </div>
