--- a/biscuits.html
+++ b/biscuits.html
@@ -186,11 +186,11 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  <b>Make the dough:</b> Whisk the flour, sugar, and salt together in a large bowl. Set aside.
+                  Preheat oven to 425°F and line a cookie sheet with nonstick parchment paper. Set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  Combine the milk and butter together in a heatproof bowl. Microwave or use the stove and heat until the butter has melted and the mixture is warm to the touch (about 110°F/43°C, no higher). Whisk in the yeast until it has dissolved. Pour mixture into the dry ingredients, add the egg, and stir with a sturdy rubber spatula or wooden spoon OR use a stand mixer with a paddle attachment on medium speed. Mix until a soft dough forms.
+                  Combine flour, baking powder, sugar, and salt in a large bowl and mix well. Set aside.
                 </li>
                 <li>
                   <span>3</span>
@@ -198,23 +198,43 @@
                 </li>
                 <li>
                   <span>4</span>
-                  <b>Fill the rolls:</b> After 10 minutes, roll the dough out in a 14×8-inch (36×20-cm) rectangle. Spread the softened butter on top. Mix together the cinnamon and brown sugar. Sprinkle it all over the dough. Roll up the dough to make a 14-inch log. Cut into 10–12 even rolls and arrange in a lightly greased 9- or 10-inch round cake pan, pie dish, or square baking pan.
+                  Remove your butter from the refrigerator and either cut it into your flour mixture using a pastry cutter or (preferred) use a box grater to shred the butter into small pieces and then add to the flour mixture and stir.
                 </li>
                 <li>
                   <span>5</span>
-                  <b>Rise:</b> Cover the pan with aluminum foil, plastic wrap, or a clean kitchen towel. Allow the rolls to rise in a relatively warm environment for 60–90 minutes or until double in size.
+                  Cut the butter or combine the grated butter until the mixture resembles coarse crumbs.
                 </li>
                 <li>
                   <span>6</span>
-                  <b>Bake the rolls:</b> After the rolls have doubled in size, preheat the oven to 375°F (190°C). Bake for 24–27 minutes, or until lightly browned. If you notice the tops are getting too brown too quickly, loosely tent the pan with aluminum foil and continue baking. If you want to be precise about their doneness, their internal temperature taken with an instant read thermometer should be around 195–200°F (91–93°C) when done. Remove pan from the oven and place pan on a wire rack as you make the frosting. (You can also make the frosting as the rolls bake.)
+                  Add milk, use a wooden spoon or spatula to stir until combined (don't over-work the dough).
                 </li>
                 <li>
                   <span>7</span>
-                  <b>Make the frosting:</b> Beat the butter and cream cheese in a medium bowl with an electric mixer until blended. Add powdered sugar, half-and-half, and vanilla extract, and mix until smooth. Spread over warm rolls.
+                  Transfer your biscuit dough to a well-floured surface and use your hands to gently work the dough together. If the dough is too sticky, add flour until it is manageable.
                 </li>
                 <li>
                   <span>8</span>
-                  Cover leftover frosted or unfrosted rolls tightly and store in the refrigerator for up to 5 days.
+                  Once the dough is cohesive, fold in half over itself and use your hands to gently flatten layers together. Rotate the dough 90 degrees and fold in half again, repeating this step 5-6 times but taking care to not overwork the dough.
+                </li>
+                <li>
+                  <span>9</span>
+                  Use your hands (do not use a rolling pin) to flatten the dough to 1" thick and lightly dust a 2 ¾" round biscuit cutter with flour.
+                </li>
+                <li>
+                  <span>10</span>
+                  Making close cuts, press the biscuit cutter straight down into the dough and drop the biscuit onto your prepared baking sheet.
+                </li>
+                <li>
+                  <span>11</span>
+                  Repeat until you have gotten as many biscuits as possible and place less than 1/2" apart on baking sheet.
+                </li>
+                <li>
+                  <span>12</span>
+                  Once you have gotten as many biscuits as possible out of the dough, gently re-work the dough to get out another biscuit or two until you have at least 6 biscuits.
+                </li>
+                <li>
+                  <span>13</span>
+                  Bake for 12 minutes or until tops are beginning to just turn lightly golden brown. Serve warm.
                 </li>
               </ul>
             </div>
