--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -251,7 +251,7 @@
                 </li>
                 <li>
                   <span>6</span>
-                  <b>Bake the rolls:</b> After the rolls have doubled in size, preheat the oven to 375°F (190°C). Bake for 24–27 minutes, or until lightly browned. If you notice the tops are getting too brown too quickly, loosely tent the pan with aluminum foil and continue baking. If you want to be precise about their doneness, their internal temperature taken with an instant read thermometer should be around 195–200°F (91–93°C) when done. Remove pan from the oven and place pan on a wire rack as you make the frosting. (You can also make the frosting as the rolls bake.)
+                  <b>Bake the rolls:</b> After the rolls have doubled in size, preheat the oven to 375°F. Bake for 24–27 minutes, or until lightly browned. If you notice the tops are getting too brown too quickly, loosely tent the pan with aluminum foil and continue baking. If you want to be precise about their doneness, their internal temperature taken with an instant read thermometer should be around 195–200°F (91–93°C) when done. Remove pan from the oven and place pan on a wire rack as you make the frosting. (You can also make the frosting as the rolls bake.)
                 </li>
                 <li>
                   <span>7</span>
