--- a/monkeybread.html
+++ b/monkeybread.html
@@ -232,7 +232,7 @@
                 </li>
                 <li>
                   <span>3</span>
-                  When the dough is done rising, preheat the oven to 375℉. Grease a 12-count muffin tin with non-stick spray or use cupcake liners.
+                  When the dough is done rising, preheat the oven to 375°F. Grease a 12-count muffin tin with non-stick spray or use cupcake liners.
                 </li>
                 <li>
                   <span>4</span>
