--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
+            <a href="/biscuits" class="tstbite-animation rounded-6">
               <img src="assets/images/menus/biscuits.jpg" class="w-100" alt="Boston Cream Cupcakes">
             </a>
             <figcaption class="mt-2">
@@ -229,7 +229,7 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
+            <a href="/creampuffs" class="tstbite-animation rounded-6">
               <img src="assets/images/menus/creampuffs.jpg" class="w-100" alt="Cinnamon Rolls">
             </a>
             <figcaption class="mt-2">
@@ -239,7 +239,7 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/monkeybread" class="tstbite-animation rounded-6">
+            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
               <img src="assets/images/menus/chocolatechipcookiecake.jpg" class="w-100" alt="Menu">
             </a>
             <figcaption class="mt-2">
