--- a/monkeybread.html
+++ b/monkeybread.html
@@ -266,7 +266,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-4 col-6">
           <figure class="my-3 my-md-4 tstbite-card">
-            <a href="recipe-sidebar.html" class="tstbite-animation stretched-link rounded-6">
+            <a href="/cinnamonrolls" class="tstbite-animation stretched-link rounded-6">
               <img src="assets/images/menus/cinnamonrolls.png" class="w-100" alt="Menu">
             </a>
             <figcaption class="mt-2">
