--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </div>
     </div>
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Popular Categories</h5>
+      <h5 class="py-3 mb-0">Categories</h5>
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -183,7 +183,7 @@
     </section>
     <!-- Tstbite Components, My 4, My Md 5 -->
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Recipes</h5>
+      <h5 class="py-3 mb-0">Popular Recipes</h5>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
