--- a/cookies.html
+++ b/cookies.html
@@ -92,7 +92,7 @@
     </div>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Cookie Recipes</h5>
+      <h5 class="py-3 mb-0">Cookies</h5>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
