--- a/cookies.html
+++ b/cookies.html
@@ -96,11 +96,11 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
+            <a href="/pumpkincookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/menus/pumpkincookies.jpg" class="w-100" alt="Pumpkin Cookies">
             </a>
             <figcaption class="mt-2">
-              <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
+              <a href="/pumpkincookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Cookies</a>
             </figcaption>
           </figure>
         </div>
