--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="category.html" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/cookies" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/menus/cookieicon.JPG" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
