--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <img src="assets/images/menus/bar.png" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="category.html" class="tstbite-category-title">Breads & Bars</a>
+              <a href="category.html" class="tstbite-category-title">Bars</a>
             </figcaption>
           </figure>
         </div>
@@ -165,7 +165,7 @@
               <img src="assets/images/menus/breakfasticon.jpeg" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="category.html" class="tstbite-category-title">Breakfast</a>
+              <a href="category.html" class="tstbite-category-title">Breads</a>
             </figcaption>
           </figure>
         </div>
