--- a/cookies.html
+++ b/cookies.html
@@ -106,18 +106,18 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/cinnamonrolls.png" class="w-100" alt="Cinnamon Rolls">
+            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
+              <img src="assets/images/menus/chocolatechipcookiecake.png" class="w-100" alt="Chocolate Chip Cookie Cake">
             </a>
             <figcaption class="mt-2">
-              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
+              <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/monkeybread" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/monkeybread.jpeg" class="w-100" alt="Menu">
+              <img src="assets/images/menus/monkeybread.jpeg" class="w-100" alt="Monkey Bread">
             </a>
             <figcaption class="mt-2">
               <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
