--- a/pumpkincookies.html
+++ b/pumpkincookies.html
@@ -205,55 +205,31 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 425°F and line a cookie sheet with nonstick parchment paper. Set aside.
+                  Preheat oven to 350°F. Line two 18 by 13-inch baking sheets with silicone baking mats or parchment paper.
                 </li>
                 <li>
                   <span>2</span>
-                  Combine flour, baking powder, sugar, and salt in a large bowl and mix well. Set aside.
+                  In a medium mixing bowl whisk together flour, baking soda, baking powder, salt, cinnamon, nutmeg, ginger and cloves for 20 seconds. Set aside.
                 </li>
                 <li>
                   <span>3</span>
-                  Transfer dough to a lightly floured surface. Using floured hands, knead the dough for 3 minutes. You should have a smooth ball of dough. If the dough is super soft or sticky, you can add a little more flour. Place in a lightly greased bowl (I use non-stick spray), cover loosely, and let the dough rest for about 10 minutes as you get the filling ingredients ready.
+                  In the bowl of an electric stand mixer fitted with the paddle attachment cream together butter, granulated sugar and brown sugar until well combined.
                 </li>
                 <li>
                   <span>4</span>
-                  Remove your butter from the refrigerator and either cut it into your flour mixture using a pastry cutter or (preferred) use a box grater to shred the butter into small pieces and then add to the flour mixture and stir.
+                  Mix in egg, then blend in pumpkin and vanilla. Add in flour mixture and mix just until combined.
                 </li>
                 <li>
                   <span>5</span>
-                  Cut the butter or combine the grated butter until the mixture resembles coarse crumbs.
+                  Scoop dough out using a cookie scoop (filling it just slightly heaping). Drop onto prepared baking sheet spacing cookies 2-inches apart.
                 </li>
                 <li>
                   <span>6</span>
-                  Add milk, use a wooden spoon or spatula to stir until combined (don't over-work the dough).
+                  Bake one sheet at a time until cookies are set, about 13 - 15 minutes. Cool on baking sheet several minutes then transfer to a wire rack to cool completely.
                 </li>
                 <li>
                   <span>7</span>
-                  Transfer your biscuit dough to a well-floured surface and use your hands to gently work the dough together. If the dough is too sticky, add flour until it is manageable.
-                </li>
-                <li>
-                  <span>8</span>
-                  Once the dough is cohesive, fold in half over itself and use your hands to gently flatten layers together. Rotate the dough 90 degrees and fold in half again, repeating this step 5-6 times but taking care to not overwork the dough.
-                </li>
-                <li>
-                  <span>9</span>
-                  Use your hands (do not use a rolling pin) to flatten the dough to 1" thick and lightly dust a 2 ¾" round biscuit cutter with flour.
-                </li>
-                <li>
-                  <span>10</span>
-                  Making close cuts, press the biscuit cutter straight down into the dough and drop the biscuit onto your prepared baking sheet.
-                </li>
-                <li>
-                  <span>11</span>
-                  Repeat until you have gotten as many biscuits as possible and place less than 1/2" apart on baking sheet.
-                </li>
-                <li>
-                  <span>12</span>
-                  Once you have gotten as many biscuits as possible out of the dough, gently re-work the dough to get out another biscuit or two until you have at least 6 biscuits.
-                </li>
-                <li>
-                  <span>13</span>
-                  Bake for 12 minutes or until tops are beginning to just turn lightly golden brown. Serve warm.
+                  Once cool, frost cookies with cream cheese frosting (optional). Store in an airtight container in a single layer in refrigerator. Bring to room temperature before serving.
                 </li>
               </ul>
             </div>
