--- a/creampuffs.html
+++ b/creampuffs.html
@@ -130,19 +130,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>15 minutes</span>
+                <span>30 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>12 minutes</span>
+                <span>45 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>27 minutes</span>
+                <span>1 hour 15 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>6-7 biscuits
+                <span>12 cream puffs
                 </span>
               </li>
             </ul>
@@ -151,31 +151,64 @@
             <div class="mt-4 mt-md-5">
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
-                <strong>Dough</strong>
+                <strong>Choux Pastry</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 cups (250g) flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="crackers">1 stick + 2 tablespoons (120 g) unsalted butter</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tablespoon baking powder</label>
+                  <label class="form-check-label" for="unsalted">1 cup (120 g) flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tablespoon granulated sugar</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon (3 g) salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon salt</label>
+                  <label class="form-check-label" for="unsalted">1 tablespoon (13 g) sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">6 tablespoons unsalted butter, very cold (unsalted European butter is ideal, but not required)</label>
-                  <label class="form-check-label" for="unsalted"><i>*For best results, chill your butter in the freezer for 10-20 minutes before beginning this recipe. It's ideal that the butter is very cold for light, flaky, buttery biscuits.</i></label>
+                  <label class="form-check-label" for="unsalted">4-5 large eggs</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3/4 cup whole milk</label>
+                  <label class="form-check-label" for="unsalted">1 cup (250 ml) water</label>
+                </div>
+                <strong>Vanilla Custard</strong>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">2 cups (500 ml) milk</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1/4 cup (60 ml) heavy cream</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">4 egg yolks</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 packet vanillin</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1/2 cup (100 g) granulated sugar</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 teaspoon (g) vanilla extract</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 cup (120 g) flour</label>
+                </div>
+                <strong>Topping</strong>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">Powdered sugar</label>
                 </div>
               </div>
             </div>
@@ -186,55 +219,62 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 425°F and line a cookie sheet with nonstick parchment paper. Set aside.
+                  Preheat oven to 350°F and line a baking sheet with parchment paper. Set aside.
                 </li>
+                <strong>Choux Pastry</strong>
                 <li>
                   <span>2</span>
-                  Combine flour, baking powder, sugar, and salt in a large bowl and mix well. Set aside.
+                  In a large pot, combine water, butter, salt, and sugar. Heat on medium-high heat until the butter is completely melted.
                 </li>
                 <li>
                   <span>3</span>
-                  Transfer dough to a lightly floured surface. Using floured hands, knead the dough for 3 minutes. You should have a smooth ball of dough. If the dough is super soft or sticky, you can add a little more flour. Place in a lightly greased bowl (I use non-stick spray), cover loosely, and let the dough rest for about 10 minutes as you get the filling ingredients ready.
+                  When the butter is completely melted, add in the flour (all at once) and stir with a wooden spoon until a dough forms and pulls away from the sides and bottom of the pot. It will turn into a smooth dough ball.
                 </li>
                 <li>
                   <span>4</span>
-                  Remove your butter from the refrigerator and either cut it into your flour mixture using a pastry cutter or (preferred) use a box grater to shred the butter into small pieces and then add to the flour mixture and stir.
+                  Continue cooking the dough, moving it around, and stretching it with your spoon for another 2 minutes, this will ensure the flour is slightly cooked and any extra moisture is released. A thin film will form on the bottom of the pot. Remove from heat after 2 minutes.
                 </li>
                 <li>
                   <span>5</span>
-                  Cut the butter or combine the grated butter until the mixture resembles coarse crumbs.
+                  Transfer the dough into a large mixing bowl and allow to cool to room temperature. Mix the dough every couple of minutes so it cools faster.
                 </li>
                 <li>
                   <span>6</span>
-                  Add milk, use a wooden spoon or spatula to stir until combined (don't over-work the dough).
+                  Once the dough has cooled, use a hand or stand mixer to incorporate the eggs, one at a time, into the dough. A hand mixer is best for this step.
                 </li>
                 <li>
                   <span>7</span>
-                  Transfer your biscuit dough to a well-floured surface and use your hands to gently work the dough together. If the dough is too sticky, add flour until it is manageable.
+                  Add in one egg, then beat until the egg is incorporated. Repeat this step with all eggs. You should end up with a sticky, thick, dough that is able to be piped and forms a thick ribbon when pulled up with a spatula. Depending on the size of your eggs you may need 4 or 5 to achieve the proper texture. <i>A note of caution: It will not look good when you start adding in the eggs. In fact, it will look like you did something wrong. But it will be ok, the mixture just needs some whisking and it will turn into a sticky, thick, dough.</i>
                 </li>
                 <li>
                   <span>8</span>
-                  Once the dough is cohesive, fold in half over itself and use your hands to gently flatten layers together. Rotate the dough 90 degrees and fold in half again, repeating this step 5-6 times but taking care to not overwork the dough.
+                  Transfer the pastry dough into a piping bag fitted with a star tip. Pipe as many puffs as you’d like, but keep them all the same size so they cook evenly. I get 10-12 larger puffs from this recipe. Pipe the dough in a circle and work your way up, but avoid making a peak. It will burn in the oven. If you end up with peaks, just flatten them down slightly.
                 </li>
                 <li>
                   <span>9</span>
-                  Use your hands (do not use a rolling pin) to flatten the dough to 1" thick and lightly dust a 2 ¾" round biscuit cutter with flour.
+                  Bake the pastry for 30 minutes, and do not open the oven during the baking time. After 30 minutes, the pastry should be golden brown. If they are not quite golden brown after 30 minutes, cook for another 5-10 minutes. Remove from the oven and cool completely. <i>Do not open the oven while the pastry is baking. If you open the oven door, the pastry will not puff up.</i>
                 </li>
+                <strong>Vanilla Custard</strong>
                 <li>
                   <span>10</span>
-                  Making close cuts, press the biscuit cutter straight down into the dough and drop the biscuit onto your prepared baking sheet.
+                  Add in half of the milk to a medium pot and reserve the other half. To the pot with the milk add in the granulated sugar, vanilla sugar, heavy cream, and vanilla extract. Heat on medium heat until just starting to boil.
                 </li>
                 <li>
                   <span>11</span>
-                  Repeat until you have gotten as many biscuits as possible and place less than 1/2" apart on baking sheet.
+                  While the milk heats up, to a mixing bowl add in the reserved milk, egg yolks, and flour. Whisk very well until the flour is combined and there aren’t any lumps.
                 </li>
                 <li>
                   <span>12</span>
-                  Once you have gotten as many biscuits as possible out of the dough, gently re-work the dough to get out another biscuit or two until you have at least 6 biscuits.
+                  When the milk begins to just boil, add in the milk and flour mixture and whisk quickly. Continue whisking and cooking the custard until it becomes very thick. It will be slightly thicker than pudding. Once it has become very thick, continue cooking it for another 2 minutes. Remove from heat.
                 </li>
                 <li>
                   <span>13</span>
-                  Bake for 12 minutes or until tops are beginning to just turn lightly golden brown. Serve warm.
+                  Taste the custard for sweetness and add any additional sugar if you’d like at this point. Transfer the custard to a bowl and cover with plastic wrap, making sure the plastic wrap touches the top of the custard (so a skin doesn’t form). Cool to room temperature and then in the refrigerator until cold. Transfer to a piping bag when cold.
+                </li>
+                <strong>Assemble the Cream Puffs</strong>
+                <li>
+                  <span>14</span>
+                  Cut each pastry puff horizontally, pipe in the vanilla custard on the bottom piece and top with the top piece. Dust with powdered sugar before serving. Store leftover assembled cream puffs in the refrigerator covered with plastic wrap.
                 </li>
               </ul>
             </div>
