--- a/creampuffs.html
+++ b/creampuffs.html
@@ -176,6 +176,8 @@
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 cup (250 ml) water</label>
                 </div>
+              </div>
+              <div class="checklist pb-4">
                 <strong>Vanilla Custard</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
@@ -205,11 +207,14 @@
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 cup (120 g) flour</label>
                 </div>
+              </div>
+              <div class="checklist pb-6">
                 <strong>Topping</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
                   <label class="form-check-label" for="unsalted">Powdered sugar</label>
                 </div>
+              </div>
               </div>
             </div>
           </div>
