--- a/creampuffs.html
+++ b/creampuffs.html
@@ -225,6 +225,8 @@
                   <span>1</span>
                   Preheat oven to 350°F and line a baking sheet with parchment paper. Set aside.
                 </li>
+              </ul>
+              <ul class="instruction-list list-unstyled">
                 <strong>Choux Pastry</strong>
                 <li>
                   <span>2</span>
@@ -258,6 +260,8 @@
                   <span>9</span>
                   Bake the pastry for 30 minutes, and do not open the oven during the baking time. After 30 minutes, the pastry should be golden brown. If they are not quite golden brown after 30 minutes, cook for another 5-10 minutes. Remove from the oven and cool completely. <i>Do not open the oven while the pastry is baking. If you open the oven door, the pastry will not puff up.</i>
                 </li>
+                </ul>
+                <ul class="instruction-list list-unstyled">
                 <strong>Vanilla Custard</strong>
                 <li>
                   <span>10</span>
@@ -275,6 +279,8 @@
                   <span>13</span>
                   Taste the custard for sweetness and add any additional sugar if you’d like at this point. Transfer the custard to a bowl and cover with plastic wrap, making sure the plastic wrap touches the top of the custard (so a skin doesn’t form). Cool to room temperature and then in the refrigerator until cold. Transfer to a piping bag when cold.
                 </li>
+                </ul>
+                <ul class="instruction-list list-unstyled">
                 <strong>Assemble the Cream Puffs</strong>
                 <li>
                   <span>14</span>
