--- a/bostoncreamcupcakes.html
+++ b/bostoncreamcupcakes.html
@@ -176,7 +176,7 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F and line a baking sheet with parchment paper. Set aside.
+                  Preheat oven to 350°F and line a 12-count cupcake tin with paper liners. Set aside.
                 </li>
               </ul>
               <ul class="instruction-list list-unstyled">
