--- a/bostoncreamcupcakes.html
+++ b/bostoncreamcupcakes.html
@@ -180,64 +180,61 @@
                 </li>
               </ul>
               <ul class="instruction-list list-unstyled">
-                <strong>Choux Pastry</strong>
+                <strong>Custard</strong>
                 <li>
                   <span>2</span>
-                  In a large pot, combine water, butter, salt, and sugar. Heat on medium-high heat until the butter is completely melted.
+                  Combine milk, cream, 1/6 cup sugar, and salt in a medium-sized saucepan over medium heat. Stir frequently until sugar is dissolved and mixture begins to simmer. Remove from heat and allow to cool for 10 minutes.
                 </li>
                 <li>
                   <span>3</span>
-                  When the butter is completely melted, add in the flour (all at once) and stir with a wooden spoon until a dough forms and pulls away from the sides and bottom of the pot. It will turn into a smooth dough ball.
+                  In a separate large bowl, vigorously whisk together egg yolks and remaining sugar until sugar begins to dissolve (about 15-30 seconds). Sprinkle cornstarch over mixture and whisk until combined and slightly thickened.
                 </li>
                 <li>
                   <span>4</span>
-                  Continue cooking the dough, moving it around, and stretching it with your spoon for another 2 minutes, this will ensure the flour is slightly cooked and any extra moisture is released. A thin film will form on the bottom of the pot. Remove from heat after 2 minutes.
+                  While whisking constantly, slowly drizzle about ⅓ cup of milk mixture into the egg mixture (we’re tempering the mixture this way to keep the eggs from cooking). Gradually add remaining cream until completely combined.
                 </li>
                 <li>
                   <span>5</span>
-                  Transfer the dough into a large mixing bowl and allow to cool to room temperature. Mix the dough every couple of minutes so it cools faster.
+                  Pour mixture back into saucepan and return to the stovetop over medium heat, whisking frequently until mixture begins to thicken. Remove from heat and pour through a fine mesh strainer into a heatproof bowl. Add vanilla and whisk in butter, one piece at a time, until completely melted and mixture is smooth.
                 </li>
                 <li>
                   <span>6</span>
-                  Once the dough has cooled, use a hand or stand mixer to incorporate the eggs, one at a time, into the dough. A hand mixer is best for this step.
-                </li>
-                <li>
-                  <span>7</span>
-                  Add in one egg, then beat until the egg is incorporated. Repeat this step with all eggs. You should end up with a sticky, thick, dough that is able to be piped and forms a thick ribbon when pulled up with a spatula. Depending on the size of your eggs you may need 4 or 5 to achieve the proper texture. <i>A note of caution: It will not look good when you start adding in the eggs. In fact, it will look like you did something wrong. But it will be ok, the mixture just needs some whisking and it will turn into a sticky, thick, dough.</i>
-                </li>
-                <li>
-                  <span>8</span>
-                  Transfer the pastry dough into a piping bag fitted with a star tip. Pipe as many puffs as you’d like, but keep them all the same size so they cook evenly. I get 10-12 larger puffs from this recipe. Pipe the dough in a circle and work your way up, but avoid making a peak. It will burn in the oven. If you end up with peaks, just flatten them down slightly.
-                </li>
-                <li>
-                  <span>9</span>
-                  Bake the pastry for 30 minutes, and do not open the oven during the baking time. After 30 minutes, the pastry should be golden brown. If they are not quite golden brown after 30 minutes, cook for another 5-10 minutes. Remove from the oven and cool completely. <i>Do not open the oven while the pastry is baking. If you open the oven door, the pastry will not puff up.</i>
+                  Place a piece of plastic wrap directly against the surface of the pastry cream, allow to cool at room temperature for 20 minutes then transfer to refrigerator to chill completely (about 2 hours). Meanwhile, prepare cupcakes.
                 </li>
                 </ul>
                 <ul class="instruction-list list-unstyled">
-                <strong>Vanilla Custard</strong>
+                <strong>Cupcakes</strong>
                 <li>
                   <span>10</span>
-                  Add in half of the milk to a medium pot and reserve the other half. To the pot with the milk add in the granulated sugar, vanilla sugar, heavy cream, and vanilla extract. Heat on medium heat until just starting to boil.
+                  With an electric or stand mixer, beat together butter, oil, and sugar until light, fluffy, and well-combined (about 30 seconds on medium/high speed).
                 </li>
                 <li>
                   <span>11</span>
-                  While the milk heats up, to a mixing bowl add in the reserved milk, egg yolks, and flour. Whisk very well until the flour is combined and there aren’t any lumps.
+                  Add eggs, one at a time, stirring well after each addition, and stir in vanilla extract.
                 </li>
                 <li>
                   <span>12</span>
-                  When the milk begins to just boil, add in the milk and flour mixture and whisk quickly. Continue whisking and cooking the custard until it becomes very thick. It will be slightly thicker than pudding. Once it has become very thick, continue cooking it for another 2 minutes. Remove from heat.
+                  In a separate bowl whisk together flour, baking powder, and salt.
                 </li>
                 <li>
                   <span>13</span>
-                  Taste the custard for sweetness and add any additional sugar if you’d like at this point. Transfer the custard to a bowl and cover with plastic wrap, making sure the plastic wrap touches the top of the custard (so a skin doesn’t form). Cool to room temperature and then in the refrigerator until cold. Transfer to a piping bag when cold.
+                  Using a spatula now rather than the electric mixer, gradually alternate adding the flour mixture and buttermilk to the butter/oil batter, starting and ending with the flour mixture and stirring until just-combined after each addition. Ingredients should be thoroughly combined, but take care not to over-mix or your cupcakes will be dense and dry.
+                </li>
+                <li>
+                  <span>14</span>
+                  Fill cupcake liners no more than 3/4 full (if you have extra batter discard it, don’t overfill the liners or your cupcakes will cave in), transfer to center rack of oven (I usually bake one pan at a time to ensure even baking), and bake for 17-19 minutes or until a toothpick inserted in the center comes out clean or with a few moist crumbs. Allow to cool for 10 minutes in cupcake pan then transfer to wire rack to cool completely.
                 </li>
                 </ul>
                 <ul class="instruction-list list-unstyled">
-                <strong>Assemble the Cream Puffs</strong>
+                <strong>Assembly</strong>
                 <li>
-                  <span>14</span>
-                  Cut each pastry puff horizontally, pipe in the vanilla custard on the bottom piece and top with the top piece. Dust with powdered sugar before serving. Store leftover assembled cream puffs in the refrigerator covered with plastic wrap.
+                  *INSERT LINK TO FUDGE FROSTING RECIPE HERE*
+                </li>
+              </ul>
+                <ul class="instruction-list list-unstyled">
+                <strong>Fudge Frosting</strong>
+                <li>
+                  *INSERT LINK TO FUDGE FROSTING RECIPE HERE*
                 </li>
               </ul>
             </div>
